@@ -1,6 +1,7 @@
 2013-xx-xx   1.6.0rc2:
 ----------------------
   * conda with no arguments now prints help text (issue 111)
+  * don't allow removing conda from root environment
 
 
 2013-05-30   1.6.0rc1:
